<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lytContenedorSaludo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >


    <TextView
        android:id="@+id/main_etiqueta1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/etiqueta1"
        android:Text="normal"
        android:textColor="@color/black"
        android:layout_marginTop="100dp"
        android:textSize="50dp"
        android:textStyle="bold"
        android:typeface="normal" />

    <EditText
        android:id="@+id/etEjemplo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        />

    <Button
        android:id="@+id/button_id"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_del_boton" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RadioButton1"
            android:textSize="24sp" />


        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RadioButton2"
            android:textSize="24sp" />
        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RadioButton3"
            android:textSize="24sp" />


        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RadioButton4"
            android:textSize="24sp" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/btnSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:switchPadding="10dp"
            android:text="@string/seleccion" />

        <CheckBox android:id="@+id/checkSeleccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/marcame"
            android:checked="false" />

    </RadioGroup>


    <Button
        android:id="@+id/button_radio"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botóndeRG" />


</LinearLayout>